feat: endpoints for POST checkin and GET checkin/status added
